--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html {
+/* html {
     height: 100%;
   }
   body {
@@ -19,5 +19,16 @@ html {
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
+  } */
+
+  .hotbarImg {
+    margin-right: 10px;
+    width: 50px;
+    height: 50px;
   }
-  
+
+  .logoutImg{
+    margin-right: 25px;
+    width: 50px;
+    height: 50px;
+  }
