--- a/Metereologia/css/style.css
+++ b/Metereologia/css/style.css
@@ -5,7 +5,7 @@ html {
     margin:0;
     padding:0;
     font-family: sans-serif;
-    background: black;
+    background: rgb(255, 255, 255);
   }
   
   .login-box {
@@ -15,9 +15,9 @@ html {
     width: 400px;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: gray;
+    background: #f1efff;
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    box-shadow: 0 15px 25px rgba(24, 10, 128, 0.6);
     border-radius: 10px;
   }
   
