--- a/css/style.css
+++ b/css/style.css
@@ -8,32 +8,45 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  font-family: sans-serif;
+  margin:0;
+  padding:0;
+}
+.login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: #f1efff;
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(178, 209, 235, 0.6);
+  border-radius: 10px;
+}
+
+.colorbonita{
+  background-color: #caf0f8;
+}
+
+.itembonita {
+  background-color: #ade8f4;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.itembonita:hover {
+  background-color: #90e0ef;
 }
 
 .main-content {
   flex: 1;
 }
 
-.weather-icon {
-  font-size: 2rem;
-  color: var(--bs-primary);
-}
-
-.weather-icon-sm {
-  font-size: 1.5rem;
-  color: var(--bs-primary);
-}
-
-.weather-icon-xs {
-  font-size: 1.25rem;
-  color: var(--bs-primary);
-}
-
-.forecast-item {
+.previsao-item {
   text-align: center;
 }
 
-.hourly-forecast {
+.hourly-previsao {
   overflow-x: auto;
   white-space: nowrap;
 }
