--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: #f8f9fa;
+  background-color: #F5EFE7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -12,6 +12,11 @@ body {
   margin:0;
   padding:0;
 }
+
+.header{
+  background-color: #9ed0e5;
+}
+
 .login-box {
   position: absolute;
   top: 50%;
@@ -25,12 +30,16 @@ body {
   border-radius: 10px;
 }
 
-.colorbonita{
-  background-color: #caf0f8;
+.widjet{
+  background-color: #9ed0e5;
+}
+
+.footer{
+  background-color: #9ed0e5;
 }
 
 .itembonita {
-  background-color: #ade8f4;
+  background-color: #B1F0F7;
   transition: background-color 0.2s ease-in-out;
 }
 
@@ -57,20 +66,6 @@ body {
   text-align: center;
 }
 
-.progress-bar-container {
-  height: 8px;
-  background-color: #e9ecef;
-  border-radius: 4px;
-  margin-bottom: 0.5rem;
-}
-
-.progress-bar-value {
-  height: 100%;
-  width: 33%;
-  background-color: #198754;
-  border-radius: 4px;
-}
-
 .temp-high {
   font-weight: bold;
 }
@@ -83,4 +78,10 @@ body {
   position: sticky;
   top: 0;
   z-index: 1020;
+}
+
+a
+{
+color:#999999;
+text-decoration: none;
 }
