--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   padding:0;
 }
 
+
 .header{
   background-color: #9ed0e5;
 }
@@ -24,9 +25,9 @@ body {
   width: 400px;
   padding: 40px;
   transform: translate(-50%, -50%);
-  background: #f1efff;
+  background: rgba(158, 208, 229, 0.8);
   box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(178, 209, 235, 0.6);
+  box-shadow: 0 15px 25px rgba(15, 81, 136, 0.6);
   border-radius: 10px;
 }
 
@@ -84,4 +85,21 @@ a
 {
 color:#999999;
 text-decoration: none;
+}
+
+
+.imagemfundo{
+  position: relative;
+  background-color: #fcfdfd;
+  z-index: 1;
+}
+
+.imagemfundo::before {
+  content: "";
+  position: absolute;
+  width: 100%; height: 100%;
+  background: url(../dados/imagens/TempoCerto.png) no-repeat center center;
+  background-size: 50%; 
+  opacity: 0.1; 
+  z-index: -1;
 }
